--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,42 @@
-name: Swift
-
+name: CI
 on:
   push:
-    branches: 
+    branches:
       - master
-  # pull_request:
-   #  branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: macos-latest
-
+  validate-and-test:
+    runs-on: macOS-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Cache RubyGems
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: ${{ runner.os }}-gem-
+
+      - name: Cache Mint packages
+        uses: actions/cache@v1
+        with:
+          path: ${{ env.MINT_PATH }}
+          key: ${{ runner.os }}-mint-${{ hashFiles('**/Mintfile') }}
+          restore-keys: ${{ runner.os }}-mint-
+
+      - name: Install dependencies
+        run: sh ./bootstrap.sh
+
+      - name: Run code validation
+        run: |
+          sh ./.github/scripts/validate-branch-name.sh
+          bundle exec danger
+        env:
+          BRANCH_NAME: ${{ github.head_ref }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
+
+      - name: Run tests
+        run: bundle exec fastlane test
+    env:
+      MINT_PATH: ${{ github.workspace }}/mint
